# socal-dreamin-2025-aws

./: .gitignore  DEMO_SCRIPT.md  EPHEMERAL_AWS_ACCOUNT.md  Makefile  OPENSEARCH_DASHBOARDS_ACCESS.md  OPENSEARCH_FIX_SUMMARY.md  OPENSEARCH_IAM_AUTHENTICATION.md  OPENSEARCH_IAM_SOLUTION.md  OPENSEARCH_NETWORKING_DEBUG.md  README.md  SETUP.md  TROUBLESHOOTING.md  opensearch-tunnel.sh  requirements.txt  setup.ps1  setup.sh  terraform-salesforce-opensearch.md  test-opensearch-tunnel.sh
aws/: sfdc-auth-secrets.json  sfdc-auth-secrets.json.example
aws/ec2-app/: app.py  config.py  opensearch_client.py  requirements.txt  salesforce_client.py
aws/ec2-app/systemd/: salesforce-streamer.service
aws/lambda/: LoginEventStream-handler.js
aws/terraform/: lambda.tf  main.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  user-data.sh  variables.tf
salesforce/: sfdx-project.json
salesforce/config/: integration-user-def.json  project-scratch-def.json
scripts/: access-dashboards-gateway.sh  access-dashboards-simple.sh  access-dashboards.sh  configure-opensearch-access.sh  configure-opensearch-aws-profile.py  create-scratch-org.sh  deploy-application.sh  deploy-infrastructure.sh  deploy.py  deploy.sh  generate-ec2-certificate.sh  generate-salesforce-certificate.sh  install-ssm-plugin.sh  opensearch-browser-proxy.py  opensearch-credentials.py  opensearch-proxy-tunnel.py  opensearch-proxy.py  opensearch-tunnel.sh  opensearch-user-proxy.py  prepare-project.sh  query-login-history.sh  setup-opensearch-user.py  ssh-to-instance.bat  ssh-to-instance.ps1  ssh-to-instance.sh  start-dashboards.sh  start-user-proxy.sh  test-opensearch-iam.py  test-opensearch-iam.sh
setup_tools/: README.md  __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt
setup_tools/commands/: __init__.py  base.py
setup_tools/commands/aws/: __init__.py  generate_certificate.py
setup_tools/commands/infrastructure/: __init__.py  deploy_complete_lab.py  setup_terraform_vars.py
setup_tools/commands/opensearch/: __init__.py  analyze_security_groups.py  diagnose_networking.py  fix_networking.py  post_terraform_setup.py  test_connectivity.py
setup_tools/commands/salesforce/: __init__.py  create_integration_user.py  create_scratch_org.py  deploy_permission_sets.py  deploy_project.py  generate_certificate.py  query_login_history.py  setup_complete.py  setup_connected_app.py
setup_tools/commands/services/: __init__.py  access_dashboards.py  start_dashboard_proxy.py
setup_tools/commands/validation/: __init__.py  generate_test_data.py  validate_lab.py
setup_tools/config/: default.yaml
setup_tools/config/environments/: demo.yaml
setup_tools/core/: __init__.py  config.py  exceptions.py  logger.py
setup_tools/tests/: __init__.py  test_validators.py
setup_tools/utils/: __init__.py  file_operations.py  shell_executor.py  validators.py
(+27 files in other folders)
